# Conference-Assignment

./: .gitignore  CMakeLists.txt  Doxyfile  QUESTOES_RESOLVIDAS.md  README.md
data/: risk_example.csv
dataset/output/: output_dataset2.csv  output_dataset8.csv
dataset/risk/: test_risk.csv
header/: assignment.h  batch.h  maxflow.h  menu.h  parser.h  show.h  structures.h
src/: assignment.cpp  batch.cpp  main.cpp  maxflow.cpp  menu.cpp  parser.cpp  show.cpp
